# PythonWZastosowaniachNaukowych

Lab1/: Instrukcja.txt  Zadanie1.py
Laboratorium1/: Zadanie1.py  fire_and_sword.txt  ogniem_i_mieczem.txt  pyproject.toml
Laboratorium10/: laboratorium10.py  pyproject.toml
Laboratorium11/: Lab11.ipynb  pyproject.toml
Laboratorium2/: Zadanie2.py  mag.txt  pyproject.toml
Laboratorium3/: Zadanie3.py  pyproject.toml
Laboratorium4/: Zad4.py  plik_json.json  pyproject.toml
Laboratorium5/: Program5.py  plik_z_danymi.json  pyproject.toml
Laboratorium6/: pyproject.toml
Laboratorium7/: laboratorium7.ipynb  pyproject.toml
Laboratorium8/: lab8.ipynb  pyproject.toml
Laboratorium9/: app.py  lab9.ipynb  pyproject.toml
hello/: hello.py  pyproject.toml
