[tool.poetry]
name = "laboratorium3"
version = "0.1.0"
description = ""
authors = ["Jakub Wlodarczyk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rich = "^12.6.0"
tqdm = "^4.64.1"
numpy = "^1.23.4"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
