[tool.poetry]
name = "lab8"
version = "0.1.0"
description = ""
authors = ["Jakub Wlodarczyk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<=3.10"
matplotlib = "^3.6.2"
numpy = "^1.24.1"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
